[package]
name = "backend"
version = "0.3.0"
authors = ["Evian-Zhang <evianzhang1999@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.7"
chrono = "0.4"
base64 = "0.12"
reqwest = { version = "0.10", features = ["json"] }
actix-web = "2.0"
actix-rt = "1.0"
tokio = { version = "0.2", features = ["fs", "io-util"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
maplit = "1.0"
